fix safari rendering on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ html, body{
 }
 
 .container{
-  max-width:50vh;
+  max-width:60vh;
 }
 
 @media only screen and (max-width: 768px) {
@@ -21,7 +21,7 @@ html, body{
 }
 
 img{
-  max-width:90%;
+  max-width:80%;
 }
 
 p{
@@ -49,6 +49,8 @@ p{
 }
 
 .footer {
+  width:100%;
+  max-width:100%;
   position: absolute;
   right: 0;
   bottom: 1rem;
